code/deployment/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: django
  type: ClusterIP
